fix(inline-tabs): corrected bg-secondary on dark mode

--- a/tegel/src/components/tabs/inline-tabs/inline-tabs-theme-vars.scss
+++ b/tegel/src/components/tabs/inline-tabs/inline-tabs-theme-vars.scss
@@ -42,7 +42,7 @@
   --sdds-inline-tabs-horizontal-divider-background: var(--sdds-blue-100);
   --sdds-inline-tabs-horizontal-divider-opacity: 0.24;
   --sdds-inline-tabs-tab-background-primary: var(--sdds-grey-900);
-  --sdds-inline-tabs-tab-background-secondary: var(--sdds-grey-846);
+  --sdds-inline-tabs-tab-background-secondary: var(--sdds-grey-868);
   --sdds-inline-tabs-background: var(--sdds-inline-tabs-tab-background-primary);
 
   /* Scroll button */
@@ -54,8 +54,8 @@
   --sdds-inline-tabs-scroll-btn-secondary: var(--sdds-grey-800);
 
   /* Tab */
-    --sdds-inline-tab-color-opacity: 0.6;
-    --sdds-inline-tab-color-opacity-selected: 1;
+  --sdds-inline-tab-color-opacity: 0.6;
+  --sdds-inline-tab-color-opacity-selected: 1;
   --sdds-inline-tabs-tab-color: var(--sdds-blue-50);
   --sdds-inline-tabs-tab-color-disabled: var(--sdds-blue-50);
   --sdds-inline-tabs-tab-color-opacity-disabled: 0.38;
